Fix spacing issues

--- a/Minity-Dark.css
+++ b/Minity-Dark.css
@@ -184,6 +184,14 @@
         text-align:  left;
     }
 
+    .radio input[type="radio"],
+    .radio-inline input[type="radio"],
+    .checkbox input[type="checkbox"],
+    .checkbox-inline input[type="checkbox"] {
+        margin-left: 0;
+        position:    absolute;
+    }
+
     .row { margin-bottom: 5px; margin-right: 0; }
 
     .searchresults {
@@ -598,8 +606,6 @@
 
         .md {
             font-size:   14px;
-            line-height: 164%;
-            max-width:   100%;
             overflow:    auto;
         }
 
@@ -886,7 +892,7 @@
         /* ! Header : Left : Logo
         -------------------------------------------------------------------------------- */
         
-            #header-img { margin: 0 12px 10px; }
+            #header-img { margin: 7px 12px 10px; }
 
                 #header-img.default-header {
                     background-image:    url( /Graphics/WVSprite.png );
@@ -1110,21 +1116,11 @@
                 font-size:   18px;
                 font-weight: bold;
                 margin:      0 0 10px;
-                text-align:  center;
+                text-align:  left;
             }
 
                 .titlebox h1 a { color: inherit; }
                 .titlebox h1 a:hover { color: #438BB7; text-decoration: none; }
-
-
-        /* ! Sidebar : Titlebox : Subscribers
-        -------------------------------------------------------------------------------- */
-            
-            .titlebox .btn-whoaverse-paging { display: block; margin: 5px auto; }
-
-            .titlebox .subscribers { display: block; text-align: center; }
-
-            .titlebox .users-online { text-align: center; }
 
 
         /* ! Sidebar : Titlebox : Markdown
@@ -1167,7 +1163,7 @@
 /* ! Sitetable
 ================================================================================ */
 
-    .content { margin: 0 320px 0 10px; max-width: 700px; z-index: 1; }
+    .content { margin: 0 320px 0 10px; z-index: 1; }
 
     .content > br { display: none; }
 
@@ -1433,33 +1429,6 @@
                     padding:     2px 4px;
                 }
                 .link .buttons li a:hover { text-decoration: underline; }
-
-                    .link .buttons li a.comments {
-                        background:            #4B4B4B;
-                        background:            -webkit-linear-gradient( top,#4B4B4B,#454545 );
-                        background:            -moz-linear-gradient( top,#4B4B4B,#454545 );
-                        background:            -ms-linear-gradient( top,#4B4B4B,#454545 );
-                        background:            -o-linear-gradient( top,#4B4B4B,#454545 );
-                        border:                1px solid #303030;
-                        -webkit-border-radius: 2px;
-                        border-radius:         2px;
-                        -webkit-box-shadow:    0 2px 0 hsla( 0,0%,0%,0.05 );
-                        box-shadow:            0 2px 0 hsla( 0,0%,0%,0.05 );
-                        display:               inline-block;
-                        color:                 #FFF;
-                        min-width:             75px;
-                    }
-                    .link .buttons li a.comments:hover {
-                        background:         #424242;
-                        background:         -webkit-linear-gradient( top,#424242,#3B3B3B );
-                        background:         -moz-linear-gradient( top,#424242,#3B3B3B );
-                        background:         -ms-linear-gradient( top,#424242,#3B3B3B );
-                        background:         -o-linear-gradient( top,#424242,#3B3B3B );
-                        border-color:       #2C2C2C;
-                        -webkit-box-shadow: 0 2px 0 hsla( 0,0%,0%,0.1 );
-                        box-shadow:         0 2px 0 hsla( 0,0%,0%,0.1 );
-                        text-decoration:    none;
-                    }
 
 
         /* ! Sitetable : Link : Markdown
@@ -1813,17 +1782,11 @@
             text-align: center;
         }
 
-    .col-md-offset-2 { margin-left: 0; }
+    .modal-body .col-md-offset-2 { margin-left: 0; }
 
 
 /* ! Responsivity
 ================================================================================ */
-
-    @media ( min-width: 1140px) {
-        .side {
-            width: 400px;
-        }
-    }
 
     @media ( max-width: 950px ) {
         #sr-header-area {
