--- a/WhoaVerse-StylesDefault.css
+++ b/WhoaVerse-StylesDefault.css
@@ -6466,14 +6466,6 @@ body > .content .link.compressed .midcol {
      width: 11px;
 }
 
-.tagline .post_upvotes {
-     color: #ff4500;
-}
-
-.tagline .post_downvotes {
-     color: #5f99cf;
-}
-
 a.author {
      margin-right: 0.5em;
 }
@@ -7746,11 +7738,11 @@ a.star {
 }
 
 .link .score.likes {
-     color: #ff8b60;
+     color: #2a9fbf;
 }
 
 .link .score.dislikes {
-     color: #9494ff;
+     color: #cf8400;
 }
 
 .link .rank {
@@ -9607,11 +9599,11 @@ button.button[disabled] {
 }
 
 .blog5 .arrow.upmod b {
-     color: #ff8b60;
+     color: #2a9fbf;
 }
 
 .blog5 .arrow.downmod b {
-     color: #9494ff;
+     color: #ff8b60;
 }
 
 .blog5 .right {
